fix(style):fix header covering anchor content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,10 @@
     box-sizing: bored-box;
     font-family: Lato, sans-serif;
 }
+html {
+    scroll-behavior: smooth;
+    scroll-padding-top: 60px;
+}
 /* Flex contianer */
 .wrapper {
     display: flex;
@@ -20,7 +24,7 @@
     flex: 1 100%;
 }
 main {
-    margin-top: 60px;
+    scroll-margin-top: 60px;
 }
 
 /* Header */
